--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -17,6 +17,9 @@ services:
         depends_on: 
             - jenkins
         container_name: ubuntu-compose
+        environment: 
+            - AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+            - AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
         build: 
